--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
         "php": "^8.1",
         "astrotomic/laravel-translatable": "^11.15",
         "cyrildewit/eloquent-viewable": "^7.0",
+        "google/apiclient": "^2.18",
         "guzzlehttp/guzzle": "^7.2",
+        "izniburak/laravel-auto-routes": "^2.1",
         "kalnoy/nestedset": "^6.0",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
@@ -21,10 +23,12 @@
         "nesbot/carbon": "^2.72",
         "realrashid/sweet-alert": "^7.2",
         "spatie/laravel-activitylog": "^4.8",
+        "spatie/laravel-google-calendar": "^3.8",
         "spatie/laravel-medialibrary": "^11.5",
         "spatie/laravel-permission": "^6.7",
         "spatie/laravel-sluggable": "^3.6",
-        "spatie/laravel-tags": "^4.6"
+        "spatie/laravel-tags": "^4.6",
+        "spatie/laravel-translation-loader": "^2.8"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.13",
