--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "mindscms/laravelshoppingcart": "^2.1",
         "nesbot/carbon": "^2.72",
         "realrashid/sweet-alert": "^7.2",
+        "spatie/browsershot": "^5.0",
         "spatie/laravel-activitylog": "^4.8",
         "spatie/laravel-google-calendar": "^3.8",
         "spatie/laravel-medialibrary": "^11.5",
