--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
         "postcss": "^8.4.39",
         "tailwindcss": "^3.4.6",
         "vite": "^5.0.0"
+    },
+    "dependencies": {
+        "puppeteer": "^23.10.1"
     }
 }
