--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "artesaos/seotools": "^1.3",
         "astrotomic/laravel-translatable": "^11.15",
         "cyrildewit/eloquent-viewable": "^7.0",
         "google/apiclient": "^2.18",
