--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,6 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
-        "laravelcollective/html": "^6.4",
         "livewire/livewire": "^3.5",
         "maatwebsite/excel": "^3.1",
         "mcamara/laravel-localization": "^2.0",
@@ -26,6 +25,7 @@
         "spatie/browsershot": "^5.0",
         "spatie/laravel-activitylog": "^4.8",
         "spatie/laravel-google-calendar": "^3.8",
+        "spatie/laravel-html": "^3.11",
         "spatie/laravel-medialibrary": "^11.5",
         "spatie/laravel-permission": "^6.7",
         "spatie/laravel-sluggable": "^3.6",
