--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "nesbot/carbon": "^2.72",
         "realrashid/sweet-alert": "^7.2",
         "spatie/browsershot": "^5.0",
+        "spatie/image": "^3.7",
         "spatie/laravel-activitylog": "^4.8",
         "spatie/laravel-google-calendar": "^3.8",
         "spatie/laravel-html": "^3.11",
