--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "artesaos/seotools": "^1.3",
         "astrotomic/laravel-translatable": "^11.15",
         "cyrildewit/eloquent-viewable": "^7.0",
+        "google/apiclient": "^2.18",
         "guzzlehttp/guzzle": "^7.2",
         "izniburak/laravel-auto-routes": "^2.1",
         "kalnoy/nestedset": "^6.0",
