--- a/.cursorignore
+++ b/.cursorignore
@@ -1,1 +1,15 @@
 # Add directories or file patterns to ignore during indexing (e.g. foo/ or *.csv)
+
+.DS_Store
+.cursorignore
+/public/backend/ckeditor/*
+*.jpg
+*.png
+*.gif
+*.svg
+*.webp
+*.ico
+*.mp4
+*.mp3
+*.wav
+*.ogg
