--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "cyrildewit/eloquent-viewable": "^7.0",
         "google/apiclient": "^2.18",
         "guzzlehttp/guzzle": "^7.2",
+        "intervention/image": "*",
         "izniburak/laravel-auto-routes": "^2.1",
         "kalnoy/nestedset": "^6.0",
         "laravel/framework": "^10.10",
